# cpg

./: CHANGELOG  Cargo.toml  NOTES.md  README.md
.github/workflows/: rust.yml
src/: context_finder.rs  error.rs  lib.rs  main.rs
tests/data/: git_patch
