[package]
name = "cpg"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Context aware pager"
repository = "https://github.com/iisulop/cpg"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["pager"]

[dependencies]
crossterm = "0.26.1"
ratatui = "0.20.1"
regex = "1.7.3"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[[bin]]
name = "cpg"
path = "src/main.rs"
