[package]
name = "cag"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Context aware pager"
repository = "https://github.com/iisulop/cag"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["pager"]
exclude = [
  "**/*.orig",
  "*.orig",
  "tests/",
  "img/",
]

[dependencies]
aho-corasick = "1.0.5"
crossterm = "0.27.0"
itertools = "0.11.0"
ratatui = "0.23.0"
regex = "1.7.3"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tui-input = "0.8.0"

[[bin]]
name = "cag"
path = "src/main.rs"
